tempfile/derive_more/tests/compile_fail/as_ref/struct_attr_multiple_fields.rs
#[derive(derive_more::AsRef)]
#[as_ref(forward)]
struct Foo {
    bar: i32,
    baz: f32,
}

fn main() {}
